# anthracite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  format.sh  http.cpp  main.cpp  shell.nix  socket.cpp
.direnv/: nix-profile-24.11-mma8n3yfap91nw44  nix-profile-24.11-mma8n3yfap91nw44.rc
.forgejo/workflows/: docker-publish.yml
.github/workflows/: docker-publish.yml
backends/: backend.cpp  file_backend.cpp
benchmark/: benchmark.py  docker-compose.yaml  rebuild-container.sh
benchmarks/http_1_v_11/: anthracite.Dockerfile  benchmark.py  docker-compose.yaml  rebuild-container.sh
benchmarks/http_1_v_11/www/: test.html
benchmarks/load_test/: apache.Dockerfile  benchmark.py  rebuild-container.sh  run.sh
build_supp/: default_config.cfg  error_gen.py  version.sh
default_www/docker/: index.html
default_www/docker_compose/: index.html
default_www/regular/: index.html
error_pages/: 404.html  500.html
lib/: anthracite.cpp  anthracite.hpp
lib/backends/: backend.hpp  file_backend.cpp
lib/config/: config.hpp
lib/http/: header_query.hpp  request.cpp  request.hpp  response.cpp  response.hpp
lib/log/: log.cpp  log.hpp
lib/socket/: openssl_socket.cpp  openssl_socket.hpp  socket.cpp  socket.hpp  tls_socket.cpp  tls_socket.hpp
lib/thread_mgr/: event_loop.cpp  event_loop.hpp  thread_mgr.hpp
src/: .gitignore  CMakeLists.txt  Makefile  anthracite.cpp  anthracite.hpp  anthracite_main.cpp  anthracite_main.hpp  api_main.cpp  error_gen.py  file_main.cpp  http.cpp  main.cpp  socket.cpp  socket.hpp  version.hpp
src/backends/: backend.cpp  file_backend.cpp  file_backend.hpp
src/build_supp/: error_gen.py  version.cpp  version.sh
src/datastructures/: smart_map.cpp
src/error_pages/: 404.html  500.html
src/http/: constants.cpp  constants.hpp  header_query.cpp  http.hpp  http_request.cpp  http_response.cpp  request.cpp  response.cpp
src/log/: log.cpp
src/test_www/: test.css  test.html
src/www/: index.html  test.html
tests/: speed_tests.cpp  unit_tests.cpp
tests/test_files/: test_request.http
www/: index.html
